[project]
name = "trenes-arg-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.13.4",
    "python-dotenv>=1.1.1",
    "python-telegram-bot>=22.3",
    "requests>=2.32.4",
    "supabase>=2.17.0",
    "telegram>=0.0.1",
]
